--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,28 @@
 /* write your override styles here */
+.tag-1{
+background-color: black;
+display: none;
+}
+.wall.tag-1{
+    background-color: blue;
+    display: none;
+}
+#tag-2{
+    background-color: aqua;
+    display: none;
+}
+#tag-3{
+    background-color: bisque;
+    display: none;
+} 
+.slick wicked #tag-3{
+    background-color: aquamarine;
+    display: none;
+}
+#tag-4{
+    background-color: brown;
+    display: none;
+}
+.parent #tag-4{
+    background-color: blueviolet;
+}
